# tic_tac_toe_cpp

./: #.gitignore#  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: tic_tac_toe.cpp
libs/: CMakeLists.txt
libs/player/: CMakeLists.txt  player.cpp
libs/ttt_board/: CMakeLists.txt  ttt_board.cpp  ttt_board.h
src/: CMakeLists.txt
src/player/: CMakeLists.txt  player.cpp  player.h
src/ttt_board/: CMakeLists.txt  ttt_board.cpp  ttt_board.h
src/ttt_minimax/: CMakeLists.txt  ttt_minimax.cpp  ttt_minimax.h
tests/: CMakeLists.txt  test_minimax.cpp  tests.cpp
